--- a/apis.yml
+++ b/apis.yml
@@ -1,37 +1,45 @@
 aid: us-senate
-name: US Senate
-description: >-
-  rest api The LDA reports include lobbying Registrations (LD-1), Quarterly
-  Activity Reports (LD-2) and Contributions Reports (LD-203). The Contributions
-  Reports are filed under section 203 of the Honest Leadership and Open
-  Government Act (HLOGA), the first of which was required to be filed by
-  registrants and lobbyists by July 30, 2008.
-type: Index
-position: Consumer
-access: 3rd-Party
-image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-tags:
-  - API
-created: '2024-12-03'
-modified: '2024-12-03'
 url: >-
   https://raw.githubusercontent.com/api-evangelist/us-senate/refs/heads/main/apis.yml
-specificationVersion: '0.19'
 apis:
   - aid: us-senate:us-senate
     name: US Senate
+    tags:
+      - API
+    humanURL: https://lda.senate.gov
+    properties:
+      - url: https://lda.senate.gov
+        type: Documentation
     description: >-
       rest api The LDA reports include lobbying Registrations (LD-1), Quarterly
       Activity Reports (LD-2) and Contributions Reports (LD-203). The
       Contributions Reports are filed under section 203 of the Honest Leadership
       and Open Government Act (HLOGA), the first of which was required to be
       filed by registrants and lobbyists by July 30, 2008.
-    humanURL: https://lda.senate.gov
-    tags:
-      - API
-    properties:
-      - type: Documentation
-        url: https://lda.senate.gov
+name: US Senate
+tags:
+  - Federal Government
+type: Contract
+image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+access: 3rd-Party
+created: '2024-12-03'
+modified: '2025-01-04'
+position: Consuming
+description: >-
+  The United States Senate is one of the two chambers of Congress, responsible
+  for representing the interests of the individual states and ensuring that
+  federal legislation is passed in a fair and representative manner. The Senate
+  plays a crucial role in the legislative process, with its members debating and
+  voting on bills and resolutions that affect the country as a whole. Senators
+  also have the power to impeach federal officials, approve treaties and
+  appointments made by the President, and conduct investigations into issues of
+  national importance. In addition to their legislative duties, Senators are
+  also tasked with serving as representatives of their constituents, advocating
+  for their interests and concerns on a national level. The Senate is an
+  essential part of the American political system, providing a crucial check on
+  the power of the executive branch and helping to ensure that the voices of all
+  Americans are heard in the halls of government.
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
+specificationVersion: '0.19'
